fixed cursor css for clerk and fixed footer on small displays

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,14 +77,6 @@
   }
 }
 
-* {
-  cursor: none;
-}
-
-*:hover {
-  cursor: none;
-}
-
 .panel {
   position: relative;
   background: linear-gradient(135deg, #000000 0%, #0a0a0e 100%);
@@ -170,4 +162,20 @@
 ::-webkit-scrollbar-thumb {
   background: #444444;
   border-radius: 0px 0px 0px 0px;
+}
+
+.cursor {
+  z-index: auto;
+}
+
+.cl-userButtonTrigger {
+  cursor: none !important;
+}
+
+div[role="dialog"] {
+  cursor: default !important;
+}
+
+.cl-button {
+  cursor: pointer !important;
 }
